# delivery-app

./: .env copy  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 117f1689768c_update_users.py  308fd6e66f02_create_addresses.py  73f856b2ba63_create_roles.py  7f77b33c3a7f_create_profiles.py  8a985c4e0d9c_create_contacts.py  8feaba29dc09_create_users.py  988163224181_create_offers.py  a8934f542f31_create_products.py  e6b0ee43ff00_refactoring_tables_relations.py  f5ac06c5053f_create_categories.py
public/css/: styles.css  styles.css.map  styles.scss
src/: app.py
src/controllers/: __init__.py  address_controllers.py  auth_controller.py  category_controller.py  contact_controller.py  home_controller.py  offer_controller.py  product_controller.py  profile_controller.py  role_controller.py  shoping_card_controller.py  user_controller.py
src/core/: config.py  database.py
src/dtos/: category_dto.py  offer_dto.py  product_dto.py  role_dto.py  user_dto.py
src/exceptions/: AddressException.py  category_exception.py  contact_exception.py  offer_exception.py  product_exception.py  profile_exception.py  role_exception.py  user_exception.py
src/models/: __init__.py  address_model.py  category_model.py  contact_model.py  offer_model.py  product_model.py  profile_model.py  role_model.py  user_model.py
src/requests/: address_request.py  auth_request.py  category_request.py  contact_request.py  offer_request.py  product_request.py  profile_request.py  role_request.py  user_request.py
src/response/: address_response.py  auth_response.py  category_response.py  (+6 more)
(+85 files in other folders)
