[tool.poetry]
name = "src"
version = "0.1.0"
description = "A simple app to delivery food"
authors = ["jacksonsr45 <jackson.severino.rocha@escola.pr.gov.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
bcrypt = "^4.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
blue = "^0.9.1"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
